// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prettier default 1`] = `
"{
  \\"ts\\": false,
  \\"tslint\\": false,
  \\"es\\": false,
  \\"eslint\\": false,
  \\"editorconfig\\": false,
  \\"prettier\\": true,
  \\"stylelint\\": false,
  \\"gitignore\\": false,
  \\"npmrc\\": false,
  \\"readme\\": false,
  \\"githooks\\": false,
  \\"commitlint\\": false,
  \\"nodenv\\": false,
  \\"webpack\\": false,
  \\"install\\": false,
  \\"force\\": true
}"
`;

exports[`prettier default 2`] = `
"# Node
**/node_modules
**/package.json
**/package-lock.json

# Generated
**/bower.json
**/lerna.json

# Build
**/build
**/dist
**/public
**/coverage
**/storybook-static

# Nitro
**/project/blueprints
**/.yo-rc.json"
`;

exports[`prettier default 3`] = `
"module.exports = require('@namics/prettier-config');
"
`;

exports[`prettier default 4`] = `
"{
  \\"devDependencies\\": {
    \\"@namics/prettier-config\\": \\"0.2.0\\",
    \\"npm-run-all\\": \\"4.1.3\\",
    \\"prettier\\": \\"1.14.3\\"
  },
  \\"scripts\\": {
    \\"lint\\": \\"npm-run-all lint:*\\",
    \\"prettier\\": \\"prettier --write \\\\\\"**/*.*(js|jsx|ts|tsx|json)\\\\\\"\\"
  }
}"
`;

exports[`prettier with-githooks 1`] = `
"{
  \\"ts\\": false,
  \\"tslint\\": false,
  \\"es\\": false,
  \\"eslint\\": false,
  \\"editorconfig\\": false,
  \\"prettier\\": true,
  \\"stylelint\\": false,
  \\"gitignore\\": false,
  \\"npmrc\\": false,
  \\"readme\\": false,
  \\"githooks\\": true,
  \\"commitlint\\": false,
  \\"nodenv\\": false,
  \\"webpack\\": false,
  \\"install\\": false,
  \\"force\\": true
}"
`;

exports[`prettier with-githooks 2`] = `
"# ~/.huskyrc
# Note: it will run in /bin/sh shell
if command -v nodenv >/dev/null 2>&1; then
  eval \\"$(nodenv init -)\\"
fi"
`;

exports[`prettier with-githooks 3`] = `
"# Node
**/node_modules
**/package.json
**/package-lock.json

# Generated
**/bower.json
**/lerna.json

# Build
**/build
**/dist
**/public
**/coverage
**/storybook-static

# Nitro
**/project/blueprints
**/.yo-rc.json"
`;

exports[`prettier with-githooks 4`] = `
"module.exports = require('@namics/prettier-config');
"
`;

exports[`prettier with-githooks 5`] = `
"{
  \\"devDependencies\\": {
    \\"@namics/prettier-config\\": \\"0.2.0\\",
    \\"husky\\": \\"1.0.1\\",
    \\"lint-staged\\": \\"7.3.0\\",
    \\"npm-run-all\\": \\"4.1.3\\",
    \\"prettier\\": \\"1.14.3\\"
  },
  \\"husky\\": {
    \\"hooks\\": {
      \\"pre-commit\\": \\"lint-staged\\"
    }
  },
  \\"lint-staged\\": {
    \\"linters\\": {
      \\"*.{js,jsx,ts,tsx,json}\\": [
        \\"prettier --list-different --write\\"
      ]
    }
  },
  \\"scripts\\": {
    \\"lint\\": \\"npm-run-all lint:*\\",
    \\"prettier\\": \\"prettier --write \\\\\\"**/*.*(js|jsx|ts|tsx|json)\\\\\\"\\"
  }
}"
`;
